crates/lingui_macro/tests/snapshots/lingui_directive__js_t_id_prefix_with_explicit_id.snap
---
source: crates/lingui_macro/tests/lingui_directive.rs
---
import { t } from '@lingui/core/macro';
/* lingui-set idPrefix="module." */
const msg = t({ id: "greeting", message: "Hello" })

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
/* lingui-set idPrefix="module." */ const msg = $_i18n._(/*i18n*/ {
    id: "module.greeting",
    message: "Hello"
});
