crates/lingui_macro/tests/snapshots/lingui_directive__js_t_with_directive_before_removed_macro_import_after_regular_import.snap
---
source: crates/lingui_macro/tests/lingui_directive.rs
---
import foo from 'bar';
/* lingui-set context="test" */
import { t } from '@lingui/core/macro';
const msg = t`Success`

↓ ↓ ↓ ↓ ↓ ↓

import foo from 'bar';
import { i18n as $_i18n } from "@lingui/core";
const msg = $_i18n._(/*i18n*/ {
    id: "vznMx_",
    message: "Success",
    context: "test"
});
