crates/lingui_macro/tests/snapshots/lingui_directive__js_t_with_directive_comment_line_comment.snap
---
source: crates/lingui_macro/tests/lingui_directive.rs
---
import { t } from '@lingui/core/macro';
// lingui-set comment="translator note"
const msg = t`Hello`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
// lingui-set comment="translator note"
const msg = $_i18n._(/*i18n*/ {
    id: "uzTaYi",
    message: "Hello",
    comment: "translator note"
});
