crates/lingui_macro/tests/snapshots/lingui_directive__js_t_with_directive_context_and_comment.snap
---
source: tests/lingui_directive.rs
---
import { t } from '@lingui/core/macro';
/* lingui-set context="ctx" comment="cmt" */
const msg = t`Hello`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
/* lingui-set context="ctx" comment="cmt" */ const msg = $_i18n._(/*i18n*/ {
    id: "3ZSjnQ",
    message: "Hello",
    comment: "cmt",
    context: "ctx"
});
