crates/lingui_macro/tests/snapshots/lingui_directive__js_t_with_directive_context_block_comment.snap
---
source: tests/lingui_directive.rs
---
import { t } from '@lingui/core/macro';
/* lingui-set context="my context" */
const msg = t`Hello`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
/* lingui-set context="my context" */ const msg = $_i18n._(/*i18n*/ {
    id: "WMU_Op",
    message: "Hello",
    context: "my context"
});
