crates/lingui_macro/tests/snapshots/lingui_directive__js_t_with_top_of_file_directive_before_macro_import.snap
---
source: crates/lingui_macro/tests/lingui_directive.rs
---
// lingui-set context="test"
import { t } from '@lingui/core/macro';
const msg = t`Success`

↓ ↓ ↓ ↓ ↓ ↓

// lingui-set context="test"
import { i18n as $_i18n } from "@lingui/core";
const msg = $_i18n._(/*i18n*/ {
    id: "vznMx_",
    message: "Success",
    context: "test"
});
